--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
 
-     <title>Get Ready - Coming Soon Template</title>
+     <title>Get Ready - Coming Soon </title>
 <!-- 
 
-Get Ready Template
-
-https://templatemo.com/tm-521-get-ready
+Get Ready 
+
 
 -->
      <meta charset="UTF-8">
