--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <!-- 
 
 Get Ready 
-
+
+
 
 -->
      <meta charset="UTF-8">
@@ -73,7 +74,7 @@ Get Ready
              <ul class="menu">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Our Studio</a></li>
-                <li><a href="#">Journal</a></li>
+                <li><a href="https://tridiproy306.github.io/particle-playground/">Journal</a></li>
                 <li><a href="#">Start a project</a></li>
                 <li><a href="#">Email Us</a></li>
             </ul>
@@ -151,4 +152,5 @@ Get Ready
      <script src="js/custom.js"></script>
 
 </body>
+
 </html>
