Fix navigation links and formatting in index.html
Updated navigation links and fixed minor formatting issues.

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@ Get Ready
              <ul class="menu">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Our Studio</a></li>
-                <li><a href="https://tridiproy306.github.io/particle-playground/">Journal</a></li>
-                <li><a href="#">Start a project</a></li>
+                <li><a href="https://tridiproy306.github.io/particle-playground/">partical</a></li>
+                <li><a href="https://tridiproy306.github.io/gravity-hand/">Gravity hand</a></li>
                 <li><a href="#">Email Us</a></li>
             </ul>
            </div>
@@ -154,3 +154,4 @@ Get Ready
 </body>
 
 </html>
+
